--- a/index.html
+++ b/index.html
@@ -16,16 +16,88 @@
 
 </head>
 
-<body>
-    <section class="home">
+<body class="bg-[#010313] min-h-screen bg-[url(./images/background.png)] bg-no-repeat bg-center">
+    <main class="">
+        <!-- Home Screen -->
+        <section class="home hidden">
 
-    </section>
-    <section class="play-ground">
+            <div class="flex flex-col gap-5 justify-center items-center h-screen">
+                <h3 class="text-8xl font-anton text-white">ALPHABET CLASH</h3>
+                <p class="font-poppins text-white text-xl">Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
+                <button class="btn btn-outline px-5 mt-5">Play Now</button>
+            </div>
+        </section>
+        <!-- PlayGround Start -->
+        <section class="play-ground">
+            <div class="flex flex-col items-center gap-10 justify-center pt-20">
+                <!-- screen -->
+                <div
+                    class="artboard artboard-horizontal phone-6 border-[12px] border-gray-900 bg-[#FFFFFFB3] rounded-lg">
+                    <div class="flex justify-center">
+                        <p class="bg-gray-900 pb-2 pl-2 pr-2 text-white rounded-b-2xl font-poppins font-medium">Don't watch keyboard  while playing...</p>
+                    </div>  
+                    <div class="flex justify-center items-center h-4/5">
+                        <p class="text-8xl text-black font-bold font-poppins ">Y</p>  
+                    </div>
+                    </div>
+                <!-- Keyboard start -->
+                <div class="text-lg">
+                    <div class="flex justify-center gap-1 my-1 w-full ">
+                        <kbd class="kbd">q</kbd>
+                        <kbd class="kbd">w</kbd>
+                        <kbd class="kbd">e</kbd>
+                        <kbd class="kbd">r</kbd>
+                        <kbd class="kbd">t</kbd>
+                        <kbd class="kbd">y</kbd>
+                        <kbd class="kbd">u</kbd>
+                        <kbd class="kbd">i</kbd>
+                        <kbd class="kbd">o</kbd>
+                        <kbd class="kbd">p</kbd>
+                    </div>
+                    <div class="flex justify-center gap-1 my-1 w-full">
+                        <kbd class="kbd">a</kbd>
+                        <kbd class="kbd">s</kbd>
+                        <kbd class="kbd">d</kbd>
+                        <kbd class="kbd">f</kbd>
+                        <kbd class="kbd">g</kbd>
+                        <kbd class="kbd">h</kbd>
+                        <kbd class="kbd">j</kbd>
+                        <kbd class="kbd">k</kbd>
+                        <kbd class="kbd">l</kbd>
+                    </div>
+                    <div class="flex justify-center gap-1 my-1 w-full">
+                        <kbd class="kbd">z</kbd>
+                        <kbd class="kbd">x</kbd>
+                        <kbd class="kbd">c</kbd>
+                        <kbd class="kbd">v</kbd>
+                        <kbd class="kbd">b</kbd>
+                        <kbd class="kbd">n</kbd>
+                        <kbd class="kbd">m</kbd>
+                        <kbd class="kbd">/</kbd>
+                    </div>
+                </div>
+                <!-- Keyboard end -->
+                <!-- life Scrore -->
+                <div class="flex justify-between w-2/5">
+                    <button class="btn text-lg rounded-3xl px-5 bg-[#894189]">
+                        Life
+                        <img src="./images/heart.svg" alt="">
+                        1
+                    </button>
 
-    </section>
-    <section class="score">
-        
-    </section>
+                    <button class="btn text-lg rounded-3xl px-5 bg-[#360490]">
+                        Score
+                        <img src="./images/score.svg" alt="">
+                        1
+                    </button>
+                </div>
+            </div>
+        </section>
+        <!-- PlayGround End -->
+        <section class="score">
+
+        </section>
+    </main>
 </body>
 
 </html>
