--- a/index.html
+++ b/index.html
@@ -19,16 +19,15 @@
 <body class="bg-[#010313] min-h-screen bg-[url(./images/background.png)] bg-no-repeat bg-center">
     <main class="">
         <!-- Home Screen -->
-        <section class="home hidden">
-
+        <section id="home" class="home">
             <div class="flex flex-col gap-5 justify-center items-center h-screen">
                 <h3 class="text-8xl font-anton text-white">ALPHABET CLASH</h3>
                 <p class="font-poppins text-white text-xl">Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
-                <button class="btn btn-outline px-5 mt-5">Play Now</button>
+                <button id="play-now" class="btn btn-outline px-5 mt-5">Play Now</button>
             </div>
         </section>
         <!-- PlayGround Start -->
-        <section class="play-ground">
+        <section id="play-ground" class="play-ground hidden">
             <div class="flex flex-col items-center gap-10 justify-center pt-20">
                 <!-- screen -->
                 <div
@@ -37,7 +36,7 @@
                         <p class="bg-gray-900 pb-2 pl-2 pr-2 text-white rounded-b-2xl font-poppins font-medium">Don't watch keyboard  while playing...</p>
                     </div>  
                     <div class="flex justify-center items-center h-4/5">
-                        <p class="text-8xl text-black font-bold font-poppins ">Y</p>  
+                        <p id="current-alphabet" class="text-8xl text-black font-bold font-poppins uppercase">Y</p>  
                     </div>
                     </div>
                 <!-- Keyboard start -->
@@ -94,10 +93,20 @@
             </div>
         </section>
         <!-- PlayGround End -->
-        <section class="score">
-
+        <!-- Final Score Start -->
+        <section class=" score flex justify-center items-center h-screen font-poppins hidden">
+            <div class=" space-y-6 flex flex-col items-center justify-center border p-12 rounded-2xl bg-gradient-to-l from-violet-800 to-violet-700">
+                <h3 class="text-6xl text-white"><span class="font-extrabold">Score :</span> <span>14</span></h3>
+                <button class="btn btn-outline px-5 text-white text-2xl hover:bg-white">Play Again</button>
+                <p class="font-medium text-xl text-white">Practice will make you Pro</p>
+            </div>
         </section>
     </main>
+
+
+    <!-- JS -->
+    <script src="./js/utility.js"></script>
+    <script src="./js/alpha-clash.js"></script>
 </body>
 
 </html>
